--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,11 +84,10 @@ div.au-stagger {
   border: 1px solid #CCC;
   border-radius: 8px;
   text-align: center;
-  padding: 0;
-  background-color: #337ab7;
-  color: rgb(136, 172, 217);
+  padding: 20px;
+  background-color: #F5F5F5;
+  color: #000;
   margin-bottom: 32px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .5);
 }
 
 .card .content {
@@ -96,8 +95,7 @@ div.au-stagger {
 }
 
 .card .content .name {
-  color: white;
-  text-shadow: 0 0 6px rgba(0, 0, 0, .5);
+  color: #000;
   font-size: 18px;
 }
 
@@ -125,6 +123,14 @@ div.au-stagger {
   -moz-border-radius: 50%;
   border-radius: 50%;
   border: 2px #FFF solid;
+}
+
+.binding{
+    line-height: 80px;
+}
+
+.page-host{
+    margin-bottom: 100px;
 }
 
 /* animation definitions */
